src/test/ui/rfc-2632-const-trait-impl/inherent-impl.stderr
error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:9:1
   |
LL | impl const S {}
   | ^^^^^-----^^^^^
   |      |
   |      `const` because of this
   |
   = note: only trait implementations may be annotated with `const`

error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:12:1
   |
LL | impl const T {}
   | ^^^^^-----^^^^^
   |      |
   |      `const` because of this
   |
   = note: only trait implementations may be annotated with `const`

error: aborting due to 2 previous errors

